--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/swipe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light"
+    android:background="@drawable/bg_gradient"
     android:layoutDirection="ltr"
     tools:context="com.mrmindteam.syriancards.Activities.HomeActivity">
 
@@ -15,6 +15,7 @@
 
         <RelativeLayout
             android:id="@+id/up_layout"
+            android:paddingTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -25,12 +26,12 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                app:cardCornerRadius="25dp"
+                app:cardCornerRadius="35dp"
                 app:cardPreventCornerOverlap="false">
 
                 <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
+                    android:layout_width="55dp"
+                    android:layout_height="55dp" />
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
@@ -38,22 +39,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
                 android:layout_toEndOf="@id/user_img"
+                android:layout_alignTop="@id/user_img"
+                android:layout_alignBottom="@id/user_img"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="User name"
-                    android:textColor="@color/textDark"
+                    android:text="Hello"
+                    android:layout_marginBottom="8dp"
+                    android:textColor="@color/white"
                     android:textSize="18sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="User name"
-                    android:textColor="@color/textDark"
+                    android:text="Oday Fattouh"
+                    android:textColor="@color/white"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -63,7 +66,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="20dp"
+                android:tint="@color/white"
                 android:src="@drawable/ic_notifications_outlined" />
 
             <LinearLayout
@@ -71,7 +75,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/user_info"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -79,7 +84,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/balance"
-                    android:textColor="@color/textDark"
+                    android:layout_marginBottom="8dp"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
@@ -93,16 +99,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/dollar"
-                        android:textColor="@color/textDark"
-                        android:textSize="32sp"
+                        android:textColor="@color/white"
+                        android:textSize="36sp"
                         android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="12,500"
-                        android:textColor="@color/textDark"
-                        android:textSize="32sp"
+                        android:textColor="@color/white"
+                        android:textSize="40sp"
                         android:textStyle="bold" />
                 </LinearLayout>
 
@@ -113,6 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/balance_layout"
+                android:baselineAligned="false"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
                 android:paddingStart="8dp"
@@ -129,12 +136,19 @@
 
                     >
 
-                    <androidx.cardview.widget.CardView
+                    <FrameLayout
                         android:layout_gravity="center"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
-                        app:cardCornerRadius="7dp"
-                        app:cardPreventCornerOverlap="false" />
+                        android:background="@drawable/button_bg">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="16dp"
+                            android:src="@drawable/ic_card"
+                            android:tint="@color/white" />
+                    </FrameLayout>
                 </FrameLayout>
 
                 <FrameLayout
@@ -145,12 +159,37 @@
                     android:background="@android:color/transparent"
                     >
 
-                    <androidx.cardview.widget.CardView
+                    <FrameLayout
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center"
-                        app:cardCornerRadius="7dp"
-                        app:cardPreventCornerOverlap="false" />
+                        android:background="@drawable/button_bg" >
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="16dp"
+                            android:tint="@color/white"
+                            android:src="@drawable/ic_balance_request"/>
+                    </FrameLayout>
+                </FrameLayout>
+                <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    android:background="@android:color/transparent">
+                    <FrameLayout
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/button_bg" >
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="16dp"
+                            android:tint="@color/white"
+                            android:src="@drawable/ic_my_history"/>
+                    </FrameLayout>
                 </FrameLayout>
                 <FrameLayout
                     android:layout_width="0dp"
@@ -161,29 +200,19 @@
 
                     >
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_gravity="center"
-                        app:cardCornerRadius="7dp"
-                        app:cardPreventCornerOverlap="false" />
-                </FrameLayout>
-                <FrameLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="10dp"
-                    android:background="@android:color/transparent"
-
-                    >
-
-                    <androidx.cardview.widget.CardView
+                    <FrameLayout
                         android:id="@+id/card_send"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center"
-                        app:cardCornerRadius="7dp"
-                        app:cardPreventCornerOverlap="false" />
+                        android:background="@drawable/button_bg" >
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="16dp"
+                            android:tint="@color/white"
+                            android:src="@drawable/ic_my_requests"/>
+                    </FrameLayout>
                 </FrameLayout>
             </LinearLayout>
 
@@ -191,7 +220,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/cards_layout"
-                android:layout_marginBottom="12dp"
+                android:layout_marginBottom="20dp"
                 android:orientation="horizontal"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
@@ -201,7 +230,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="send"
+                    android:text="sell a card"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="14sp"
@@ -211,7 +240,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="send"
+                    android:text="withdraw"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="14sp"
@@ -221,7 +250,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="send"
+                    android:text="my orders"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="14sp"
@@ -231,7 +260,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="send"
+                    android:text="my requests"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="14sp"
@@ -242,7 +271,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="300dp"
+            android:minHeight="400dp"
             android:layout_below="@id/up_layout"
             android:background="@drawable/home_below_bg">
 
@@ -251,7 +280,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="35dp"
                 android:layout_marginEnd="25dp"
                 android:layout_marginBottom="16dp">
 
@@ -260,18 +289,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@id/see_all"
                     android:text="@string/last_notifications"
                     android:textColor="@color/black"
-                    android:textSize="18sp"
+                    android:textSize="22sp"
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/see_all"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:text="@string/see_all"
                     android:textColor="@color/colorAccent"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
 
                     />
