--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
 
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="white_600">#60FFFFFF</color>
+
 </resources>
