--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="white">#ffffff</color>
     <color name="white_600">#60FFFFFF</color>
 
+    <color name="secondary">@color/light</color>
+
+
 </resources>
