--- a/app/src/main/res/layout/activity_request_balance.xml
+++ b/app/src/main/res/layout/activity_request_balance.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.RequestBalance">
+    tools:context=".activities.RequestBalanceActivity">
 
     <RelativeLayout
         android:id="@+id/transfer_option_layout"
