--- a/app/src/main/res/layout/activity_sell_card.xml
+++ b/app/src/main/res/layout/activity_sell_card.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightBlue"
-    tools:context=".Activities.SellCard"
+    tools:context=".activities.SellCardActivity"
     android:layoutDirection="ltr"
    >
 
