--- a/app/src/main/res/layout/activity_balance_requests.xml
+++ b/app/src/main/res/layout/activity_balance_requests.xml
@@ -65,6 +65,7 @@
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_requests"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
