--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -135,7 +135,7 @@
         app:layout_constraintVertical_bias="0.216" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/phone_et"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:layout_marginBottom="8dp"
@@ -162,8 +162,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Email"
-        app:layout_constraintBottom_toTopOf="@+id/editText"
+        android:text="@string/phone"
+        app:layout_constraintBottom_toTopOf="@+id/phone_et"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.235"
         app:layout_constraintStart_toEndOf="@+id/btnLogin"
@@ -178,16 +178,16 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Password"
+        android:text="@string/password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.261"
         app:layout_constraintStart_toEndOf="@+id/btnSignup"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/phone_et"
         app:layout_constraintVertical_bias="0.094" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/password_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -222,7 +222,7 @@
 <!--        app:layout_constraintVertical_bias="0.152" />-->
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/login"
         android:layout_width="175dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
