--- a/app/src/main/res/layout/item_balance_request.xml
+++ b/app/src/main/res/layout/item_balance_request.xml
@@ -8,6 +8,7 @@
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--TODO :: add type -->
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -56,7 +57,6 @@
                 android:layout_weight="1"
                 android:text="10/09/2021"/>
         </LinearLayout>
-
         <TextView
             android:id="@+id/status"
             android:layout_width="wrap_content"
