--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -43,7 +43,7 @@
                 android:textColor="@color/black"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="1000.00 S.P"
+                android:text="@string/card_name"
                 android:textStyle="bold"/>
             <TextView
                 android:id="@+id/card_type"
@@ -53,7 +53,7 @@
                 android:textColor="@color/black"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="1000.00 S.P"
+                android:text="@string/card_type"
                 android:textStyle="bold"/>
 
             <TextView
